--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+1999-03-09  Thorsten Kukuk  <kukuk@suse.de>
+
+	* nis/ypclnt.c: Try only twice to connect to NIS server.
+
 1999-03-09  Roland McGrath  <roland@baalperazim.frob.com>
 
 	* hurd/hurdexec.c (_hurd_exec): Add missing `else' in last change.
