--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+1999-03-09  Ulrich Drepper  <drepper@cygnus.com>
+
+	* version.h (VERSION): Bump to 2.1.1.
+
 1999-03-09  Thorsten Kukuk  <kukuk@suse.de>
 
 	* nis/ypclnt.c: Try only twice to connect to NIS server.
