--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+1999-03-14  Ulrich Drepper  <drepper@cygnus.com>
+
+	* locale/programs/localedef.c (main): Initialize `cat' to please
+	the compiler.
+
 1999-03-14  Roland McGrath  <roland@baalperazim.frob.com>
 
 	* hurd/hurdlookup.c (__hurd_file_name_lookup_retry): Under O_NOFOLLOW,
