--- a/manual/libc.texinfo
+++ b/manual/libc.texinfo
@@ -101,13 +101,13 @@ Foundation.
 @end titlepage
 @page
 
-@ifnottex
+@ifinfo
 @node Top, Introduction, (dir), (dir)
 @top Main Menu
 This is Edition @value{EDITION}, last updated @value{UPDATED}, of
 @cite{The GNU C Library Reference Manual}, for Version @value{VERSION}
 of the GNU C Library.
-@end ifnottex
+@end ifinfo
 
 @include top-menu.texi
 @include chapters.texi
