--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+1999-03-15  Andreas Schwab  <schwab@issan.cs.uni-dortmund.de>
+
+	* manual/libc.texinfo: Undo last change for now.
+
 1999-03-15  Ulrich Drepper  <drepper@cygnus.com>
 
 	* intl/locale.alias: Add entries for Croatian.
