--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,15 @@
+1999-03-19  Andreas Jaeger  <aj@arthur.rhein-neckar.de>
+
+	* timezone/africa: Update from tzdata1999b.
+	* timezone/asia: Likewise.
+	* timezone/australasia: Likewise.
+	* timezone/europe: Likewise.
+	* timezone/northamerica: Likewise.
+	* timezone/southamerica: Likewise.
+	* timezone/zone.tab: Likewise.
+
+	* timezone/README: Mention tzdata1999b.
+
 1999-03-17  Ulrich Drepper  <drepper@cygnus.com>
 
 	* sysdeps/generic/segfault.c (write_strsignal): New function.
