--- a/timezone/README
+++ b/timezone/README
@@ -8,7 +8,7 @@ The files
 	northamerica southamerica pacificnew etcetera factory
 	backward systemv solar87 solar88 solar89
 	iso3166.tab zone.tab leapseconds yearistype
-come from the tzdata1998i package by Arthur David Olson et.al.
+come from the tzdata1999b package by Arthur David Olson et.al.
 
 These packages may be found at ftp://elsie.nci.nih.gov/pub/.  Commentary
 should be addressed to tz@elsie.nci.nih.gov.
