--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+1999-03-16  Andreas Jaeger  <aj@arthur.rhein-neckar.de>
+
+	* manual/getopt.texi (Using Getopt): Explain "::" in option
+	string.  Reported by Yuri Niyazov <yuricake@geocities.com>.
+
 1999-03-18  Thorsten Kukuk  <kukuk@suse.de>
 
 	* sunrpc/clnt_unix.c: Fix creation of parameters for
